# lotr

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  autosave.json  pyproject.toml  savegame.json  setup.py
src/lotr_adventure/: __init__.py  __main__.py  cli.py  config.py  main.py
src/lotr_adventure.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lotr_adventure/ai/: __init__.py  client.py  narrator.py  npc_chat.py  prompts.py  schemas.py  state_updates.py
src/lotr_adventure/content/: locations.yaml  npc_profiles.yaml  playable_characters.yaml  story_anchors.yaml  story_paths.yaml
src/lotr_adventure/domain/: __init__.py  lore.py  models.py
src/lotr_adventure/engine/: __init__.py  commands.py  game.py  saves.py
src/lotr_adventure/ui/: __init__.py  input.py  render.py  theme.py
tests/: test_commands.py  test_lore.py  test_npc_chat.py  test_prompts.py  test_saves.py  test_story_mode.py
